--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
   <groupId>com.cgm</groupId>
-  <artifactId>Hoadontiendien</artifactId>
+  <artifactId>cosmetic-platform</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>HoaDonTienDien</name>
+  <name>Beauty Ecommerce</name>
   <url>http://maven.apache.org</url>
   	<dependencies><!-- Servlet API -->
 		<dependency>
